--- a/index.html
+++ b/index.html
@@ -3,20 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=keyboard_double_arrow_up" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="Dogflix-pirateando peliculas desde 2020" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mguevara111.github.io/movies/" />
+    <meta property="og:description" content="Dogflix-pirateando peliculas desde 2020, la mejor manera de ver peliculas es no pagando, descubre los ultimos estrenos, las mejores/peores peliculas para ti." />
+    <meta property="og:image" content="https://github.com/Mguevara111/movies/tree/main/images/Dogflixlogo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Mi Portafolio de Proyectos" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Dogflix-pirateando peliculas desde 2020" />
+    <meta name="twitter:description" content="Dogflix-pirateando peliculas desde 2020, la mejor manera de ver peliculas es no pagando, descubre los ultimos estrenos, las mejores/peores peliculas para ti." />
+    <meta name="twitter:image" content="https://github.com/Mguevara111/movies/tree/main/images/Dogflixlogo.png" />
+    <meta name="theme-color" content="#FF0000">
     <link rel="stylesheet" href="./grid.css">
     <link rel="stylesheet" href="./style.css">
-    <title>Ver pelis</title>
+    <title>Dogflix</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="./images/Dogflixlogo.png" alt="logo-dogflix" class="logo-dogflix">
+    </header>
     <main>
-        <h1>Mira que peliculas te interesan</h1>
         <article id="media-container" class="media-container">
             
         </article>
         <section id="movie-container" class="movie-container row">  
 
         </section>
+        <button id="btn-totop" class="btn-totop">
+            <img src="./icons/keyboard_double_arrow_up_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="arrow" class="inner-img">
+        </button>
     </main>
     <script src="./spelis.js" type="module"></script>
 </body>
