--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Dogflix-pirateando peliculas desde 2020" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mguevara111.github.io/movies/" />
+    <meta property="og:url" content="https://mguevara111.github.io/movies/Dogflixlogo.png" />
     <meta property="og:description" content="Dogflix-pirateando peliculas desde 2020, la mejor manera de ver peliculas es no pagando, descubre los ultimos estrenos, las mejores/peores peliculas para ti." />
     <meta property="og:image" content="https://github.com/Mguevara111/movies/tree/main/images/Dogflixlogo.png" />
     <meta property="og:image:width" content="1200" />
